More fixes to button spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,7 @@ body{
     height: 100vh;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 400;
+    overflow-x: hidden;
 }
 header{
     background-color: #B19893 ;
@@ -77,6 +78,7 @@ button{
     color: white;
     background-color: #595656;
     padding: 15px;
+    margin-right: 30px;
 }
 
 #button3{
